All cleaned up, implementation of modulo protocols is planned next